# kubectl_analytics

./: .gitignore  Dockerfile  README.md  docker.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
kubectl_analytics/: kubectl.py  kubectl_deployments.py  kubectl_events.py  kubectl_istio.py  kubectl_logs.py  kubectl_volumes.py  main.py  output_csv.py  output_json.py  output_table.py
