[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kubectl-analytics"
version = "0.1.0"
description = "Kubernetes adoption and mesh statistics — per namespace."
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "kubernetes>=29.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
kubectl-analytics = "kubectl_analytics.main:main"

[tool.hatch.build.targets.wheel]
packages = ["kubectl_analytics"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.10",
]
